# BoolStabilizer

./: .gitignore  README.md  pyproject.toml
boolstabilizer/: __init__.py  bool_attribute.py  bool_stabilizer.py
tests/: __init__.py  test_bool_attribute.py  test_bool_stabilizer.py
