[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boolstabilizer"
version = "0.1.0"
description = "A class that stabilizes booleans for a determined amount of time and/or checks"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "GrayJou"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["boolean", "stabilizer", "debounce", "filter"]

[project.urls]
"Homepage" = "https://github.com/Grayjou/BoolStabilizer"
"Bug Tracker" = "https://github.com/Grayjou/BoolStabilizer/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["boolstabilizer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
